# neo-research-briefs

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  discord-flow.md  notion-schema.md  obsidian.md  openclaw.md  runbook.md
scripts/: bootstrap.sh  run_neo_briefs.sh
src/neo_research_briefs/: __init__.py  cli.py  config.py  models.py  openclaw.py  safety.py
src/neo_research_briefs/adapters/: __init__.py  discord.py  github.py  notion.py  obsidian.py
src/neo_research_briefs/services/: __init__.py  watcher.py
templates/obsidian/: research-brief.md
tests/: conftest.py  test_config.py  test_discord.py  test_github.py  test_models.py  test_notion.py  test_obsidian.py  test_openclaw.py  test_safety.py
