[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-research-briefs"
version = "0.1.0"
description = "OpenClaw-driven orchestration for research briefs across Notion, Discord, GitHub, and Obsidian."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "neo-research-briefs contributors" }]
keywords = ["openclaw", "notion", "discord", "github", "obsidian", "automation", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
]
# v1 stays on the standard library. Real network adapters pull deps in later.
dependencies = []

[project.optional-dependencies]
# Optional transport/tooling extras if you want to replace the stdlib-based defaults.
notion = ["httpx>=0.27"]
discord = ["httpx>=0.27"]
github = ["httpx>=0.27"]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
neo-briefs = "neo_research_briefs.cli:main"

[project.urls]
Homepage = "https://github.com/pranavprem/neo-research-briefs"
Issues = "https://github.com/pranavprem/neo-research-briefs/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/neo_research_briefs"]
